# EASYICU

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  compare_ricu_pyricu.py  extract_sofa_data.py  feature_tracking.json  miiv  pyproject.toml  pytest.ini  setup.py  test_main.py  validate_features.py  validation_results.json  verify_features.py
demo/: README.md  demo_quick_start.py  demo_visualization.py  demo_webapp.py  demo_with_mock_data.py  start_webapp.sh  test_all_features.py  test_webapp_core.py  test_webapp_features.py
dictionary/: hirid variable dictionary.xlsx
src/: id_mapping_callbacks.py  merge_fix.py
test_data_50patients/: d_items.fst  d_labitems.fst  icustays.fst  icustays.parquet  inputevents.fst  microbiologyevents.fst  outputevents.fst  patients.fst  prescriptions.fst  procedureevents.fst
test_data_aumc/: admissions.parquet  drugitems.parquet  freetextitems.parquet  listitems.parquet  procedureorderitems.parquet
test_data_aumc_100/: admissions.parquet  drugitems.parquet  freetextitems.parquet  listitems.parquet  procedureorderitems.parquet  processitems.parquet
test_data_eicu/: admission.parquet  admissiondrug.parquet  admissiondx.parquet  allergy.parquet  apacheApsVar.parquet  apacheapsvar.parquet  apachepatientresult.parquet  apachepredvar.parquet  basic_demographics.parquet  careplancareprovider.parquet  careplaneol.parquet  careplangeneral.parquet  careplangoal.parquet  careplaninfectiousdisease.parquet  customlab.parquet  diagnosis.parquet  hospital.parquet  infusiondrug.parquet  intakeOutput.parquet  intakeoutput.parquet  lab.parquet  medication.parquet  microlab.parquet  note.parquet  nurseCharting.parquet  nurseassessment.parquet  nursecare.parquet  nursecharting.parquet  pasthistory.parquet  patient.parquet  physicalexam.parquet  respiratoryCare.parquet  respiratorycare.parquet  respiratorycharting.parquet  treatment.parquet  vitalPeriodic.parquet  vitalaperiodic.parquet  vitalperiodic.parquet
test_data_hirid/: general.parquet  hirid_variable_reference.csv  ordinal.parquet  variables.parquet
test_data_hirid_100/: ordinal.parquet  variables.parquet
test_data_miiv/: admissions.parquet  caregiver.parquet  chartevents.parquet  d_hcpcs.parquet  d_icd_diagnoses.parquet  d_icd_procedures.parquet  d_items.parquet  d_labitems.parquet  datetimeevents.parquet  diagnoses_icd.parquet  diagnosis.parquet  discharge.parquet  discharge_detail.parquet  drgcodes.parquet  edstays.parquet  (+21 more)
(+152 files in other folders)
