[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyricu"
version = "0.2.0"
description = "Python toolkit for working with ICU datasets inspired by the R ricu package."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ICU Analytics", email = "icu-analytics@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "pandas>=1.5",
  "pyarrow>=11.0",
  "numpy>=1.23",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "requests>=2.28",
  "tqdm>=4.65"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1.0"
]

[project.scripts]
pyricu = "pyricu.scripts.extract_features:main"

[project.urls]
Homepage = "https://example.com/pyricu"
Repository = "https://example.com/pyricu.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyricu = ["data/*.json"]
