[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyricu"
version = "0.2.0"
description = "Python toolkit for working with ICU datasets inspired by the R ricu package."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ICU Analytics", email = "icu-analytics@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "pandas>=1.5",
  "pyarrow>=11.0",
  "numpy>=1.23",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "requests>=2.28",
  "tqdm>=4.65"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1.0"
]
viz = [
  "plotly>=5.15",
  "kaleido>=0.2.1"
]
webapp = [
  "streamlit>=1.28",
  "plotly>=5.15",
  "kaleido>=0.2.1",
  "openpyxl>=3.1",
  "psutil>=5.9"
]
all = [
  "pyricu[dev,viz,webapp]"
]

[project.scripts]
pyricu = "pyricu.scripts.extract_features:main"
pyricu-webapp = "pyricu.webapp:run_app"

[project.urls]
Homepage = "https://github.com/shen-lab-icu/pyricu"
Repository = "https://github.com/shen-lab-icu/pyricu.git"
Issues = "https://github.com/shen-lab-icu/pyricu/issues"
Documentation = "https://github.com/shen-lab-icu/pyricu/blob/main/README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyricu = ["data/*.json"]
